@@ -1,3 +1,12 @@
+Wed Jan 20 21:42:41 1999  Tom Yu  <tlyu@mit.edu>
+
+	* login.c (main): Call setluid().
+
+	* krshd.c (doit): Call setluid().
+
+	* configure.in: Check for setluid() rather than main() in
+	libsecurity.
+
 Sat Aug 15 00:01:15 1998  Geoffrey King  <gjking@mit.edu>
 
 	* krcp.c (error): Don't call rcmd_stream_write if iamremote is not
